# SicHash

./: .dockerignore  .gitmodules  BenchmarkData.h  CITATION.cff  CMakeLists.txt  Dockerfile  README.md  bijections.cpp  comparison.cpp  comparisonN.cpp  comparisonThreads.cpp  constructionSuccess.cpp  maxLoadFactor.cpp  old_plots.cpp  phfBenchmark.cpp  phfBenchmarkSingle.cpp  plots.cpp  sicHashBenchmark.cpp  solvers.cpp  unitTest.cpp
.github/workflows/: build.yml
benchmark/: BBHashContender.h  BenchmarkData.h  CmphContender.h  Contender.h  HeterogeneousContender.h  MphfWbpmContender.h  PTHashContender.h  RecSplitContender.h  ShockHashContender.h  SicHashContender.h
contenders/: BBHashContender.h  CmphContender.h  Contender.h  HeterogeneousContender.h  PTHashContender.h  RecSplitContender.h
hashAssignment/: CuckooWalkMulti.h  HashAssignment.cpp  HashAssignment.h  HashAssignmentGreedy.cpp  HashAssignmentGreedy.h  HashAssignmentMatching.cpp  HashAssignmentMatching.h  HashAssignmentThreshold.cpp  HashAssignmentThreshold.h  HashAssignmentThresholdCuckoo.cpp  HashAssignmentThresholdCuckoo.h  HashAssignmentThresholdGreedy.cpp  HashAssignmentThresholdGreedy.h  HashAssignmentThresholdMatching.cpp  HashAssignmentThresholdMatching.h
hdc/: Hdc.cpp  Hdc.h  HdcGreedy.cpp  HdcGreedy.h  HdcMax.cpp  HdcMax.h  HdcSlidingWindow.cpp  HdcSlidingWindow.h
include/: HeterogeneousCuckooHashTable.h  HeterogeneousCuckooHashTableTest.h  HeterogeneousCuckooPerfectHashing.h  IrregularCuckooHashTable.h  IrregularCuckooHashTableHK.h  MinimalPerfectCuckooHashTable.h  PartitionedSicHash.h  ShockHash.h  SicHash.h  SimpleRibbon.cpp  SimpleRibbon.h  SlowIrregularCuckooHashTable.h  TinyBinaryCuckooHashTable.h
include/sichash/: IrregularCuckooHashTable.h  TinyBinaryCuckooHashTable.h
leafAssignment/: LeafAssignment.h  LeafAssignmentPermutation.h  LeafAssignmentRecSplit.h  LeafAssignmentRecSplitRotate.h  LeafAssignmentTest.h
measurements-old/: entropyOfEveryItemsHash.R  hashfunctions-cmph.csv  hashfunctions-mine.csv  hashfunctions.R  matching-fixpoint.R  matching-fixpoint.csv  matching.R  matching.csv  scatterplot.R  scatterplot.csv  sliding-window-old.csv  sliding-window.R  sliding-window.csv  threshold-cuckoo-multilayer-0.5-no0.csv  threshold-cuckoo-multilayer-0.5.csv  threshold-cuckoo-multilayer-0.81-no0.csv  threshold-cuckoo-multilayer-0.81.csv  threshold-cuckoo-multilayer-0.98-just3-earlystop.csv  threshold-cuckoo-multilayer-0.98-just3.csv  threshold-cuckoo-multilayer-0.98-no0.csv  threshold-cuckoo-multilayer-0.98-randomwalk.csv  threshold-cuckoo-multilayer-0.98.csv  threshold-cuckoo-multilayer.R  threshold-gradient-0.98.csv  threshold-gradient.R  threshold-success-cuckoo-0.95-N2000.csv  threshold-success-cuckoo-0.95-N250.csv  threshold-success-cuckoo-0.98.csv  threshold-success-greedy-both.csv  threshold-success-matching-0.50.csv  threshold-success-matching-0.81.csv  threshold-success-matching-0.98-noninteger-last7.csv  threshold-success-matching-0.98-noninteger-middle5.csv  threshold-success-matching-0.98.csv  threshold-success-matching.R  var-success-K.R  var-success-K.csv  var-success-codings.R  var-success-codings.csv
scripts/: .gitignore  Dockerfile  boxPlotBinaryCuckoo.sh  boxPlotIrregularCuckooAverage.sh  boxPlotIrregularCuckooSpace.sh  bucketSize.sh  comparisonPlot.tex  competitorNames.txt  constructionSuccessLoadFactorVsN.sh  docker-compose.yml  figure-1.tex  figure-5.tex  figure-6.tex  heatmap.sh  maxLoadFactorPlainVsHeterogeneous.sh  queries.sh  scatterplot.sh  scatterplot1M.sh  scatterplot20M.sh  scatterplot5M.sh  threads.sh
scripts/dockerVolume/: figure-1.sh  figure-5.sh  figure-6.sh  runscript.sh
src/: BenchmarkData.h  constructionSuccess.cpp  example.cpp  maxLoadFactor.cpp  sicHashBenchmark.cpp  solvers.cpp
util/: GaussianElimination.cpp  GaussianElimination.h  GraphPeeler.h  Hash.h  HeterogeneousCuckooHashTable.h  HeterogeneousCuckooHashTableTest.h  HeterogeneousCuckooPerfectHashing.h  SimpleRibbon.h  Util.h  VariableLengthRetrieval.cpp  VariableLengthRetrieval.h  benchmark_data.h
